# llm_refactored

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
agent/: __init__.py  agent.py  llm.py  parser.py  schemas.py  tool_registry.py
agent/tools/: __init__.py  base.py  calculator.py  knowledge_base.py  translator.py  weather.py
tests/: conftest.py  test_agent.py  test_integration.py  test_llm.py  test_parser.py  test_schemas.py  test_smoke.py  test_tool_registry.py  test_tools.py
